@@ -34,6 +34,7 @@
 		<project.config.process.test.annotations.phase>generate-test-sources</project.config.process.test.annotations.phase>
 		<project.config.source.main.compile.include>**/*.java</project.config.source.main.compile.include>
 		<project.config.source.main.compile.exclude>zzz</project.config.source.main.compile.exclude>
+		<project.config.source.main.compile.arguments>-Dnet.bytebuddy.experimental=true</project.config.source.main.compile.arguments>
 		<project.config.source.main.compile.annotationProcessors />
 		<project.config.source.main.aspect.phase>process-classes</project.config.source.main.aspect.phase>
 		<project.config.source.test.compile.include>**/*.java</project.config.source.test.compile.include>
@@ -87,7 +88,6 @@
 		<slf4j.version>2.0.7</slf4j.version>
 		<aspectj.tools.version>1.9.20</aspectj.tools.version>
 		<junit-jupiter.version>5.10.0</junit-jupiter.version>
-		<junit.version>4.13.2</junit.version>
 		<spring.boot.version>3.1.5</spring.boot.version>
 		<apache.commons.version>3.13.0</apache.commons.version>
 		<apache.collections.version>4.4</apache.collections.version>
@@ -363,6 +363,7 @@
 							<goal>compile</goal>
 						</goals>
 						<configuration>
+							<compilerArguments>${project.config.source.main.compile.arguments}</compilerArguments>
 							<proc>none</proc>
 							<includes>
 								<include>
@@ -399,8 +400,7 @@
 					<dependency>
 						<groupId>org.ow2.asm</groupId>
 						<artifactId>asm</artifactId>
-						<version>${maven.asm.version}</version> <!-- Use newer
-						version of ASM -->
+						<version>${maven.asm.version}</version> <!-- Use newer version of ASM -->
 					</dependency>
 				</dependencies>
 
@@ -608,8 +608,7 @@
 						<configuration>
 							<mainClass>
 								${project.config.spring.boot.package.main}</mainClass>
-							<jvmArguments>
-								${project.config.spring.boot.package.args}</jvmArguments>
+							<jvmArguments>${project.config.spring.boot.package.args}</jvmArguments>
 							<classifier>run</classifier>
 						</configuration>
 					</execution>
